# prjoxide

./: .gitignore  .gitmodules  COPYING  README.md  devices.json  environment.sh  generate_database.sh  link-db-root.sh  radiant.sh  radiant_cmd.sh  requirements.txt
docs/: database.md  first_notes.md
docs/bels/: OXIDE_COMB.md  OXIDE_FF.md  SEIO33_CORE.md  SLICE.md  SLICEA.md  SLICEB.md  SLICEC.md  overview.md
docs/general/: bitstream.md  cacheing.md  fuzzing.md  structure.md
docs/tiles/: CIB_LR.md  PLC.md  cib_common.md
examples/: .gitignore  common.mk
examples/blinky_evn/: Makefile  blinky.v  evn.pdc
examples/blinky_vip/: Makefile  blinky.v  vip.pdc
examples/blinky_vvml/: Makefile  blinky.v  vvml.pdc
examples/bram_evn/: Makefile  bram.v  evn.pdc
examples/lram_evn/: Makefile  blinky.v  evn.pdc
examples/spinex_minimal/: Makefile  SpinexMinimal_references.v  tinyclunx.pdc  tinyclunx33.pdc
fuzzers/: .gitignore
fuzzers/000-build-pip-overlays/: fuzzer.py
fuzzers/010-global-structure/: fuzzer.py
fuzzers/016-site-mappings/: fuzzer.py  primitive.v
fuzzers/LFCPNX/001-plc-routing/: fuzzer.py
fuzzers/LFCPNX/002-cib-routing/: fuzzer.py
fuzzers/LFCPNX/010-lut-init/: fuzzer.py  lut.v
fuzzers/LFCPNX/011-reg-config/: ff.v  fuzzer.py
fuzzers/LFCPNX/012-plc-modes/: fuzzer.py  slice.v
fuzzers/LFCPNX/020-plc_tap/: fuzzer.py
fuzzers/LFCPNX/021-cmux/: fuzzer.py
fuzzers/LFCPNX/022-midmux/: fuzzer.py
fuzzers/LFCPNX/023-trunk-spine/: fuzzer.py
fuzzers/LFCPNX/030-io_route/: fuzzer.py
fuzzers/LFCPNX/110-global-structure/: fuzzer.py
fuzzers/LFCPNX/shared/: empty.v  empty_100.v  route_100.v
fuzzers/LIFCL/001-plc-routing/: fuzzer.py
fuzzers/LIFCL/002-cib-routing/: fuzzer.py
fuzzers/LIFCL/010-lut-init/: fuzzer.py  lut.v
fuzzers/LIFCL/011-reg-config/: ff.v  fuzzer.py
fuzzers/LIFCL/012-plc-modes/: fuzzer.py  slice.v
fuzzers/LIFCL/091-osc/: osc.v  (+4 more)
libprjoxide/: Cargo.toml
libprjoxide/prjoxide/: Cargo.toml  build.rs
libprjoxide/prjoxide/src/: bbaexport.rs  bels.rs  bitstream.rs  chip.rs  database.rs  database_html.rs  fasmparse.rs  fuzz.rs  interchange_gen.rs  ipfuzz.rs  lib.rs  nodecheck.rs  pip_classes.rs  schema.rs  sites.rs  wires.rs
libprjoxide/prjoxide/src/bba/: bbafile.rs  bbastruct.rs  idstring.rs  idxset.rs  tileloc.rs  tiletype.rs  timing.rs
libprjoxide/prjoxide/src/interchange_gen/: bel_pin_map.rs  routing_graph.rs  writer.rs
libprjoxide/pyprjoxide/: Cargo.toml
libprjoxide/pyprjoxide/src/: lib.rs
libprjoxide/src/: bbaexport.rs  bels.rs  bitstream.rs  chip.rs  database.rs  database_html.rs  docs.rs  fasmparse.rs  fuzz.rs  ipfuzz.rs  lib.rs  pack.rs  unpack.rs  wires.rs
libprjoxide/src/bba/: bbafile.rs  bbastruct.rs  idstring.rs  idxset.rs  tileloc.rs  tiletype.rs
libprjoxide/src/bbaexport/: idstring.rs  idxset.rs  tileloc.rs  tiletype.rs
minitests/: .gitignore
minitests/interchange/: archcheck.sh  nexus_bel_buckets.yaml  nexus_device_config.yaml
minitests/pcie/: coef5_one.v  coef5_zero.v
minitests/simple/: io.v
timing/: .gitignore
timing/tools/: fuzzer.mk  gen_carry.py  gen_clk.py  gen_dsp.py  gen_io.py  gen_ram.py  generic.mk  pickle_sdf.py  postprocess.mk  run-fuzzers.mk  verilog_to_json.sh  yosysify_verilog.py
timing/util/: extract_cell_timings.py  extract_route.py  parse_sdf.py  solve_interconnect.py  timing_config.py
tools/: .gitignore  bitstreamcache.py  explore_tilegrid.py  extract_tilegrid.py  fixup_io_tilegrid.py  get_device_tilegrid.sh  html_all.py  html_tilebits.py  html_tilegrid.py  merge-databases.py  parse_pins.py  parse_webdoc.py  reformat_database.py  test_sites.py  tilegrid_all.py
util/common/: cachecontrol.py  database.py  lapie.py  nodes_database.py  radiant.py  tiles.py
util/fuzz/: DesignFileBuilder.py  fuzzconfig.py  fuzzloops.py  get_params.py  interconnect.py  nonrouting.py  primitives.py
(+105 files in other folders)
