[package]
name = "libprjoxide"
version = "0.1.0"
authors = ["David Shah <dave@ds0.me>"]
edition = "2018"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.5.1"
pyo3 = { version = "0.8.4", features = ["extension-module"] }
multimap = "0.8.0"

[lib]
name = "libprjoxide"
crate-type = ["cdylib"]

