[package]
name = "prjoxide"
version = "0.1.0"
authors = ["David Shah <dave@ds0.me>"]
edition = "2018"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.5.1"
multimap = "0.8.0"
lazy_static = "1.4.0"
pulldown-cmark = "0.6.1"
itertools = "0.8.2"
rug = "1.6.0"
log = "0.4.11"

[lib]
name = "prjoxide"
crate-type = ["rlib"]

[[bin]]
name = "oxide_unpack"
path = "src/unpack.rs"

[[bin]]
name = "oxide_pack"
path = "src/pack.rs"


[[bin]]
name = "oxide_bbaexport"
path = "src/bbaexport.rs"

