[package]
name = "prjoxide"
version = "0.1.0"
authors = ["gatecat <gatecat@ds0.me>"]
edition = "2018"
build = "build.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.5.1"
multimap = "0.8.0"
lazy_static = "1.4.0"
pulldown-cmark = "0.6.1"
itertools = "0.8.2"
rug = "1.6.0"
log = "0.4.11"
clap = "3.0.0-beta.2"
include_dir = "0.6.0"
capnp = "0.14"

[build-dependencies]
capnpc = "0.14"

[lib]
name = "prjoxide"
crate-type = ["rlib"]

[[bin]]
name = "prjoxide"
path = "src/bin/prjoxide.rs"
