[package]
name = "prjoxide"
version = "0.1.0"
authors = ["gatecat <gatecat@ds0.me>"]
edition = "2018"
build = "build.rs"

[features]
default = []
interchange = ["capnp", "capnpc"]

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.5.1"
multimap = "0.8.0"
lazy_static = "1.4.0"
pulldown-cmark = "0.6.1"
itertools = "0.8.2"
num-bigint = "0.4.0"
log = "0.4.11"
clap = { version = "3.1", features = ["derive"] }
include_dir = "0.6.0"
capnp = {version = "0.14", optional = true }
flate2 = {version = "1.0" }
env_logger = "0.11.8"

[build-dependencies]
capnpc = {version = "0.14", optional = true }

[lib]
name = "prjoxide"
crate-type = ["rlib"]

[[bin]]
name = "prjoxide"
path = "src/bin/prjoxide.rs"
